# digits

./: digits.cabal
src/Data/: Digits.hs
test/: Tests.hs
