cabal-version: 2.4
name: digits
category: Data
version: 0.3.1
description: Converts integers to lists of digits and back.
license: BSD-3-Clause
license-File: LICENSE
copyright: (c) 2009-2016 Henry Bucklow, Charlie Harvey
author: Henry Bucklow

library
  hs-source-dirs:      src
  exposed-modules:     Data.Digits
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite digits-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                     , digits
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
